--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ axum = "0.7.4"
 env_logger = "0.11.1"
 log = "0.4.20"
 markdown = "1.0.0-alpha.16"
+rand = "0.8.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9.31"
 slugify = "0.1.0"
