--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ env_logger = "0.11.1"
 log = "0.4.20"
 markdown = "1.0.0-alpha.16"
 rand = "0.8.5"
+regex = "1.10.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9.31"
 slugify = "0.1.0"
