--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9.31"
 slugify = "0.1.0"
 tokio = { version = "1.35.1", features = ["rt-multi-thread", "full"] }
-tower-http = { version = "0.5.0", features = ["trace", "fs"] }
+tower-http = { version = "0.5.0", features = ["trace", "fs", "set-header"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["fmt", "std"] }
