--- a/projects/slow-learner/meta.yaml
+++ b/projects/slow-learner/meta.yaml
@@ -1,5 +1,8 @@
 title: slow-learner — python type inference tool
 slug: slow-learner
 github: https://github.com/nj-vs-vh/slow-learner
+links:
+  - name: PyPI
+    url: https://pypi.org/project/slow-learner
 code_languages:
   - python
