--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 askama = { version = "0.12", features = ["with-axum"] }
 askama_axum = "0.4.0"
 axum = "0.7.4"
+comrak = "0.21.0"
 env_logger = "0.11.1"
 log = "0.4.20"
-markdown = "1.0.0-alpha.16"
 rand = "0.8.5"
 regex = "1.10.3"
 serde = { version = "1.0", features = ["derive"] }
