--- a/projects/minesweeper/meta.yaml
+++ b/projects/minesweeper/meta.yaml
@@ -1,3 +1,3 @@
-title: tool-assisted in-terminal minesweeper
+title: tool-assisted minesweeper in terminal
 slug: tas-minesweeper
 github: https://github.com/nj-vs-vh/ascii-minesweeper
