--- a/projects/cr-plot-web/meta.yaml
+++ b/projects/cr-plot-web/meta.yaml
@@ -1,4 +1,7 @@
 title: browser version of cosmic rays spectrum plot
+start:
+  year: 2024
+  month: 1
 github: https://github.com/nj-vs-vh/The_CR_Spectrum
 links:
   - name: original plot repo
