--- a/projects/image-in-gh-calendar/meta.yaml
+++ b/projects/image-in-gh-calendar/meta.yaml
@@ -1,4 +1,7 @@
 title: github commit calendar image generator
+start:
+  year: 2021
+  month: 10
 slug: gh-commit-calendar-image
 github: https://github.com/nj-vs-vh/image-in-gh-commit-calendar
 code_languages:
