--- a/projects/minesweeper/meta.yaml
+++ b/projects/minesweeper/meta.yaml
@@ -1,4 +1,7 @@
 title: tool-assisted minesweeper in terminal
+start:
+  year: 2021
+  month: 7
 slug: tas-minesweeper
 github: https://github.com/nj-vs-vh/ascii-minesweeper
 math: true
