--- a/projects/slow-learner/meta.yaml
+++ b/projects/slow-learner/meta.yaml
@@ -1,4 +1,7 @@
 title: slow-learner — python type inference tool
+start:
+  year: 2022
+  month: 11
 slug: slow-learner
 github: https://github.com/nj-vs-vh/slow-learner
 links:
