added showcase to this page\

--- a/projects/template/meta.yaml
+++ b/projects/template/meta.yaml
@@ -16,6 +16,7 @@ code_languages:
   # refers to language packages of highlight.js CDN
   # see https://highlightjs.org/
   - python
+math: false
 tags:
   - code:python
   - platform:web
