separate projects page

--- a/projects/slow-learner/meta.yaml
+++ b/projects/slow-learner/meta.yaml
@@ -1,4 +1,4 @@
-title: slow-learner — python type inference tool
+title: slow-learner, python type inference tool
 start:
   year: 2022
   month: 11
