--- a/projects/aoc/meta.yaml
+++ b/projects/aoc/meta.yaml
@@ -1,5 +1,7 @@
 title: advent of code
 slug: advent-of-code
+start:
+  year: 2021
 links:
   - name: 2021
     url: https://github.com/nj-vs-vh/advent-of-code-2021
