--- a/projects/ru-semantle/meta.yaml
+++ b/projects/ru-semantle/meta.yaml
@@ -1,9 +1,9 @@
-title: semantle in russian
+title: semantle clone in russian
 start:
   year: 2022
   month: 6
 slug: ru-semantle
 github: https://github.com/nj-vs-vh/ru-semantle
 links:
-  - name: play (in russian)
+  - name: play
     url: https://ru-semantle.nj-vs-vh.name/
