--- a/projects/cr-plot-web/meta.yaml
+++ b/projects/cr-plot-web/meta.yaml
@@ -1,4 +1,4 @@
-title: browser version of cosmic rays spectrum plot
+title: cosmic rays spectrum plot in browser
 slug: crspectrum-plot-web-version
 start:
   year: 2024
