--- a/projects/i-am-sitting-in-a-room/meta.yaml
+++ b/projects/i-am-sitting-in-a-room/meta.yaml
@@ -1,4 +1,4 @@
-title: automation for 'I Am Sitting in a Room' by Alvin Lucier
+title: automation for performance of Alvin Lucier's 'I Am Sitting in a Room'
 start:
   year: 2024
   month: 3
