--- a/projects/i-am-sitting-in-a-room/meta.yaml
+++ b/projects/i-am-sitting-in-a-room/meta.yaml
@@ -3,3 +3,7 @@ start:
   year: 2024
   month: 3
 slug: i-am-sitting-in-a-room-by-alvin-lucier
+tags:
+  - code:matlab
+  - code:lua
+  - topic:sound
