--- a/projects/image-in-gh-calendar/meta.yaml
+++ b/projects/image-in-gh-calendar/meta.yaml
@@ -6,3 +6,6 @@ slug: gh-commit-calendar-image
 github: https://github.com/nj-vs-vh/image-in-gh-commit-calendar
 code_languages:
   - bash
+tags:
+  - code:python
+  - platform:github
