--- a/projects/tanakh/meta.yaml
+++ b/projects/tanakh/meta.yaml
@@ -7,4 +7,8 @@ github: https://github.com/nj-vs-vh/tanakh-reading
 links:
   - name: website
     url: https://tanakh-reading.nj-vs-vh.name/
+tags:
+  - code:python
+  - code:svelte
+  - platform:web
   
