--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ askama_axum = "0.4.0"
 axum = "0.7.4"
 comrak = "0.21.0"
 env_logger = "0.11.1"
+itertools = "0.13.0"
 log = "0.4.20"
 rand = "0.8.5"
 regex = "1.10.3"
