--- a/projects/aoc/meta.yaml
+++ b/projects/aoc/meta.yaml
@@ -9,6 +9,8 @@ links:
     url: https://github.com/nj-vs-vh/advent-of-code-2022
   - name: 2023
     url: https://github.com/nj-vs-vh/advent-of-code-2023
+  - name: 2024
+    url: https://github.com/nj-vs-vh/advent-of-code-2024
 tags:
   - code:python
   - code:rust
