--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ axum = "0.7.4"
 comrak = "0.21.0"
 env_logger = "0.11.1"
 itertools = "0.13.0"
+kamadak-exif = "0.6.1"
 log = "0.4.20"
 rand = "0.8.5"
 regex = "1.10.3"
