basic gallery functionality

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ askama_axum = "0.4.0"
 axum = "0.7.4"
 comrak = "0.21.0"
 env_logger = "0.11.1"
+image = "0.25.8"
 itertools = "0.13.0"
 jiff = "0.2.15"
 kamadak-exif = "0.6.1"
