--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ itertools = "0.13.0"
 jiff = "0.2.15"
 kamadak-exif = "0.6.1"
 log = "0.4.20"
+palette_extract = "0.1.0"
 rand = "0.8.5"
 regex = "1.10.3"
 serde = { version = "1.0", features = ["derive"] }
