--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ edition = "2021"
 askama = { version = "0.12", features = ["with-axum"] }
 askama_axum = "0.4.0"
 axum = "0.7.4"
-comrak = "0.21.0"
+comrak = "0.49.0"
 env_logger = "0.11.1"
+fancy-regex = "0.17.0"
 image = "0.25.8"
 itertools = "0.13.0"
 jiff = "0.2.15"
